syntax = "proto3";
package uploader;

service Uploader {
    rpc SubirLibro(Solicitud_SubirLibro) returns (Respuesta_SubirLibro) {}  
    rpc EstadoMaquina(Solicitud_EstadoMaquina) returns (Respuesa_EstadoMaquina) {}  
}

//solicita subir un libro
message Solicitud_SubirLibro {
    bytes chunk = 1;
    int32 id = 2;
    string nombre_libro = 3;
    int32 cantidad = 4;
    string tipoExclusionMutua = 5;
}

//respuesta del dataNode
message Respuesta_SubirLibro {
    int32 respuesta = 1;
}

//solicitud para saber si la maquina esta caida o no
message Solicitud_EstadoMaquina {
    string estado_maquina = 1;
}

message Respuesa_EstadoMaquina {
    string estado_maquina = 1;
}

